--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,19 @@
 {
   "version": 2,
   "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "frontend/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/frontend/index.html" }
+  ]
+}
+
+{
+  "version": 2,
+  "builds": [
     {
       "src": "backend/server.js",
       "use": "@vercel/node"
