--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,17 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "frontend/**", "use": "@vercel/static" }
-  ],
+  "functions": {
+    "api/index.js": { "runtime": "nodejs18.x" }
+  },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "^/api/(.*)$", "dest": "/api/index.js" },
+
+    { "src": "^/(spa/.+)$", "dest": "/frontend/$1" },
+    { "src": "^/((?:.*)\\.(?:js|jsx|css|png|jpg|jpeg|gif|webp|avif|svg|ico|map))$", "dest": "/frontend/$1" },
+    { "src": "^/(index\\.html)$", "dest": "/frontend/$1" },
+
     { "handle": "filesystem" },
+
     { "src": "/(.*)", "dest": "/frontend/index.html" }
   ]
-}
-
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "backend/server.js"
-    }
-  ],
-  "installCommand": "npm install --prefix backend && npm install --prefix frontend",
-  "buildCommand": "npm run build --prefix frontend"
 }
