--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.js": { "runtime": "nodejs18.x" }
-  },
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "frontend/**", "use": "@vercel/static" }
+  ],
   "routes": [
     { "src": "^/api/(.*)$", "dest": "/api/index.js" },
-
     { "src": "^/(spa/.+)$", "dest": "/frontend/$1" },
     { "src": "^/((?:.*)\\.(?:js|jsx|css|png|jpg|jpeg|gif|webp|avif|svg|ico|map))$", "dest": "/frontend/$1" },
     { "src": "^/(index\\.html)$", "dest": "/frontend/$1" },
-
     { "handle": "filesystem" },
-
     { "src": "/(.*)", "dest": "/frontend/index.html" }
   ]
 }
